--- a/report/thesisreport.cls
+++ b/report/thesisreport.cls
@@ -18,7 +18,7 @@
 \usepackage{etoolbox}
 \usepackage{setspace}
 \usepackage{verbatim}
-
+\usepackage{multirow}
  \bibliographystyle{IEEEtran}
  
  \doublespacing
