--- a/report/thesisfront.tex
+++ b/report/thesisfront.tex
@@ -2,13 +2,12 @@
 
 \def\lskip{\vspace{0.5cm}}
 
+\begin{center}
+	\begin{tabular}{c}
+		ÉCOLE CENTRALE DE NANTES
+		\end{tabular}
+\end{center}
 
-\begin{tabular}{p{7cm}p{8cm}}
-ÉCOLE CENTRALE DE NANTES
-&
-% EMARO students only
-% \raggedleft FIRST YEAR INSTITUTION	
-\end{tabular}
 
 \vspace{2cm}
 
@@ -29,7 +28,7 @@
 	
 	Selvakumar Hastham Sathiya Satchi Sadanandam \lskip
 	
-	On 23 July 2021 \lskip\lskip
+	On 23 August 2021 \lskip\lskip
 	
 	{\Large \textbf{Realtime human motion imitation by humanoid robot with balance constraint}}
 	
