Proof reading pre-chapters

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -7,7 +7,8 @@ crafted by the engineers, mathematicians and craftsman that prove the existence 
 of Unimate and Shakey, the robotics has been widely boosted. Indeed, the first Industrial revolution of robotics only considered 
 arm manipulators and wheeled platforms in a structured and defined environments. The interest towards human-like robots or humaniod 
 robots has always grown instead of being only in science fiction. The recent researches and development has proved the possiblity
-of building humanoid robots or simply humanoids, becoming reality, although not powerful or autonomy as desired. 
+of building humanoid robots or simply humanoids, becoming reality, past the industrial revolution, although not powerful or autonomy 
+as desired yet. 
 
  
 
