--- a/report/state_of_the_art.tex
+++ b/report/state_of_the_art.tex
@@ -510,7 +510,7 @@ on this work is detailed and adapted in chapter \ref{chapter-3}.
 
 \subsection{Hybrid Retargetting using Time Scaling}
 
-This work by \cite{karthikmunirathinam} is to take advantage of motion tracking by manipulating the motion by time scaling. This method changes
+This work by Kumar \cite{karthikmunirathinam} is to take advantage of motion tracking by manipulating the motion by time scaling. This method changes
 the traveling time of the reference motion by decelerating the motion if unbalanced and by accelerating the motion in order to synchronise with the
 reference motion by decelerating the motion if unbalanced and by accelerating inorder to keep it synchronising with the human actor. This approach serves as 
 a different variant in the domain of motion imitation of humanoid robots since when a suitable solution with time scaling is not found, joint based control 
